--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <!-- nav link -->
                     <div class="nav-link">
-                        <a href="#">Spark</a>
+                        <a href="#">Spark<i class="fa-solid fa-angle-down"></i></a>
 
                     </div>
             </div> 
@@ -56,7 +56,7 @@
             </div>
             <!-- <i class="fa-light fa-magnifying-glass"></i> -->
             <div class="bottom-heading">
-                <i class="fa-light fa-magnifying-glass" aria-hidden="true"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <div class="bottom-heading">
                 <h3>Log In</h3>
