--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodePen: Online Code Editor and Front End Web Developer Community</title>
-    <link rel="stylesheet" href="/styles/common.css">
+    <link rel="stylesheet" href="styles/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
@@ -82,7 +82,7 @@
         
         <div class="right_column">
             <p> This is <strong>CodePen Projects!</strong> </p>
-            <img src="/images/background/image.png">
+            <img src="images/background/image.png">
         </div>
     </div>
     <div class="footer">
