--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Logo wrapper -->
         <div class="left-column">
             <div class="logo-wrapper">
-                <img src="/images/logo/image.png">
+                <img src="images/logo/image.png">
             </div>
         </div> 
         <!-- Link wrapper -->
